feat: 유저/폴더 스웨거작성, 완료과제조회 코드 수정 (#110)
