# src/swagger/swagger.yml
@@ -1722,3 +1722,73 @@ paths:
         '500':
           description: |
             - INTERNAL_SERVER_ERROR: 서버 내부 오류가 발생했습니다.
+
+#완료 과제 조회 API  
+  /api/v1/task/completed:
+    get:
+      tags:
+        - Task
+      summary: 완료된 과제 조회
+      description: |
+        사용자의 완료된 과제 목록을 조회합니다.
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: 조회 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  resultType:
+                    type: string
+                    example: "SUCCESS"
+                  message:
+                    type: string
+                    example: "완료된 과제 조회에 성공하였습니다."
+                  data:
+                    type: object
+                    properties:
+                      tasks:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            taskId:
+                              type: integer
+                              example: 15
+                            title:
+                              type: string
+                              example: "자료구조 과제"
+                            completedAt:
+                              type: string
+                              example: "2025-11-19"
+                              description: "과제 완료 날짜"
+                            type:
+                              type: string
+                              example: "개인"
+                            status:
+                              type: string
+                              example: "완료"
+                            folderId:
+                              type: integer
+                              nullable: true
+                              example: 101
+                            folderTitle:
+                              type: string
+                              nullable: true
+                              example: "프로그래밍"
+                            color:
+                              type: string
+                              nullable: true
+                              example: "#FF5733"
+        '401':
+          description: |
+            - TOKEN_NOT_FOUND: 인증 토큰이 없습니다.
+        '404':
+          description: |
+            - USER_NOT_FOUND: 해당 사용자를 찾을 수 없습니다.
+        '500':
+          description: |
+            - INTERNAL_SERVER_ERROR: 서버 내부 오류가 발생했습니다.                      
